# CMakeAutoGenTest

./: CMakeLists.txt  README.md
Schemas/: MyData.proto  User.proto
Sources/: main.cpp
